finalizado bach
