# src/usuarios/users.route.js
@@ -2,6 +2,6 @@ const router = require('express').Router();
 const userController = require('../usuarios/users.controller');
 
 router.post('/create', userController.createUserController);
-router.get('/todos', userController.findAllUserController);
+router.get('/', userController.findAllUserController);
 
 module.exports = router;
